--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Profile/UpdateAssociateProfile.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Profile/UpdateAssociateProfile.cshtml
@@ -22,24 +22,24 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     Update Associate Profile
-                       
+
                 </div>
                 <div class="panel-body">
-                    
-                        <fieldset>
 
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label>Login ID</label>
-                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
-                                        <br />
-                                        <input type="submit" value="Get Details" name="btnGetAssociateProfile" class="btn btn-success pull-right" />
-                                    </div>
+                    <fieldset>
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label>Login ID</label>
+                                    @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                                    <br />
+                                    <input type="submit" value="Get Details" name="btnGetAssociateProfile" class="btn btn-success pull-right" />
                                 </div>
                             </div>
-                            <hr />
-                            <div class="row">
+                        </div>
+                        <hr />
+                        <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label>First Name</label>
@@ -52,62 +52,62 @@
                                     <br />
                                     <label>Mobile</label>
                                     @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.Mobile)
+                                    @Html.ValidationMessageFor(m => m.Mobile, @onkeypress = "return isNumberKey(event);")
                                 </div>
                             </div>
                             @*<div class="col-lg-3">
-                                <div class="form-group">
-                                    
-                                </div>
-                            </div>*@
+                                    <div class="form-group">
+
+                                    </div>
+                                </div>*@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     @*<img src="@Model.ProfilePicture" height="190" width="250" />*@
-                                  
+
                                     <input type="file" name="fileProfilePicture" />
                                 </div>
                             </div>
                         </div>
 
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label>Sponsor Id</label>
-                                        @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control",@disabled="disabled" })
-                                        @Html.ValidationMessageFor(m => m.SponsorId)
-                                        @*<input type ="text"  value="@item1.SponsorId" disabled="disabled" class="form-control" />*@
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label>Sponsor Name</label>
-                                        @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control",@disabled="disabled"  })
-                                        @Html.ValidationMessageFor(m => m.SponsorName)
-                                        @*<input type ="text"  value="@item1.SponsorName" disabled="disabled" class="form-control" />*@
-                                    </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label>Sponsor Id</label>
+                                    @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @disabled = "disabled" })
+                                    @Html.ValidationMessageFor(m => m.SponsorId)
+                                    @*<input type ="text"  value="@item1.SponsorId" disabled="disabled" class="form-control" />*@
                                 </div>
                             </div>
-
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label>Email Id</label>
-                                        @Html.TextBoxFor(m => m.EmailId, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(m => m.EmailId)
-                                        @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label>Joining Date</label>
-                                        @Html.TextBoxFor(m => m.JoiningDate, new { @class = "form-control",@disabled="disabled"  })
-                                        @Html.ValidationMessageFor(m => m.JoiningDate)
-                                        @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
-                                    </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label>Sponsor Name</label>
+                                    @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @disabled = "disabled" })
+                                    @Html.ValidationMessageFor(m => m.SponsorName)
+                                    @*<input type ="text"  value="@item1.SponsorName" disabled="disabled" class="form-control" />*@
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="row">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label>Email Id</label>
+                                    @Html.TextBoxFor(m => m.EmailId, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(m => m.EmailId)
+                                    @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label>Joining Date</label>
+                                    @Html.TextBoxFor(m => m.JoiningDate, new { @class = "form-control", @disabled = "disabled" })
+                                    @Html.ValidationMessageFor(m => m.JoiningDate)
+                                    @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label>Account Number</label>
@@ -145,24 +145,33 @@
                             </div>
                         </div>
 
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="form-group">
-                                        <input type="submit" id="btnUpdate" class="btn btn-success pull-right" name="btnUpdate" value="Update" onclick="editProfile()" />
-                                        <input type="button" id="btnEdit" class="btn btn-primary pull-right" value="Edit" onclick="editProfile()" style="display:none" />
-                                    </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    <input type="submit" id="btnUpdate" class="btn btn-success pull-right" name="btnUpdate" value="Update" onclick="editProfile()" />
+                                    <input type="button" id="btnEdit" class="btn btn-primary pull-right" value="Edit" onclick="editProfile()" style="display:none" />
                                 </div>
                             </div>
-                        </fieldset>
-                    
+                        </div>
+                    </fieldset>
+
                 </div>
             </div>
         </div>
     </div>
-         
+
 }
 
 <script>
+    function isNumberKey(evt) {
+
+        var charCode = (evt.which) ? evt.which : event.keyCode;
+        if (charCode != 46 && charCode > 31
+          && (charCode < 48 || charCode > 57))
+            return false;
+
+        return true;
+    }
     function editProfile() {
         $("#txtFirstName").attr("disabled", false);
         $("#txtLastName").attr("disabled", false);
