--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/ViewProfile.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/ViewProfile.cshtml
@@ -51,7 +51,7 @@
                                                     @Html.ValidationMessageFor(m => m.LastName)
                                                     <br />
                                                     <label>Mobile <span style="color:red">*</span></label>
-                                                    @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control" })
+                                                    @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", @onkeypress = "return isNumberKey(event);" })
                                                     @Html.ValidationMessageFor(m => m.Mobile)
                                                 </div>
                                             </div>
@@ -198,6 +198,16 @@
             $('#BankBranch').focus();
             return false;
         }
+        return true;
+    }
+
+    function isNumberKey(evt) {
+
+        var charCode = (evt.which) ? evt.which : event.keyCode;
+        if (charCode != 46 && charCode > 31
+          && (charCode < 48 || charCode > 57))
+            return false;
+
         return true;
     }
 </script>
