--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
@@ -78,9 +78,11 @@
                                                                 <th>Site Name</th>
                                                                 <th>Sector Name</th>
                                                                 <th>PlotNo</th>
-                                                                <th>Description</th>
                                                                 <th>Upgradation Date</th>
-                                                                <th>Package</th>
+                                                                <th>Payment Mode</th>
+                                                                <th>Description</th>
+                                                              
+                                                               
                                                                 <th>Price</th>
                                                                 <th>Calculation Status</th>
                                                                 <th>Print</th>
@@ -101,10 +103,12 @@
                                                                             <td>@Item.SiteName</td>
                                                                             <td>@Item.SectorName</td>
                                                                             <td>@Item.PlotNumber</td>
-                                                                            <td>@Item.Description</td>
                                                                             <td>@Item.UpgradtionDate</td>
+                                                                            <td>@Item.PaymentMode</td>
+                                                                            <td>@Item.Description</td>
+                                                                           
 
-                                                                            <td>@Item.Package</td>
+                                                                           
 
                                                                             <td>@Item.Amount</td>
 
