--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -119,7 +119,7 @@
                                                         <label for="user-password">Password</label>
                                                     </fieldset>
                                                     <br />
-                                                    <a href="/Home/Registration" class="btn btn-outline-primary float-left btn-inline">Register</a>
+                                                    @*<a href="/Home/Registration" class="btn btn-outline-primary float-left btn-inline">Register</a>*@
                                                     <input type="submit" id="Login" class="btn btn-primary float-right btn-inline" name="Login" value="Sign In" />
                                                     <br />
                                                     
