--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/DistributePayment.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/DistributePayment.cshtml
@@ -115,6 +115,23 @@
                                                                 }
                                                             }
                                                         </tbody>
+                                                        <tfoot>
+                                                            <tr>
+                                                                <th></th>
+
+                                                                <th></th><th></th>
+                                                                <th style="text-align:right">Total Net Payable Amount</th>
+                                                                <th style="color:dodgerblue;font-weight:800">@ViewBag.Total</th>
+
+
+
+                                                                <th></th>
+                                                                <th></th>
+                                                                <th></th>
+                                                                <th></th>
+
+                                                            </tr>
+                                                        </tfoot>
                                                     </table>
                                                 </div>
                                             </div>
